--- a/pzis_labs/lab4/lab4.ipynb
+++ b/pzis_labs/lab4/lab4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,42 +11,38 @@
     "\n",
     "\n",
     "def create_self_signed_cert(C, ST, L, O, OU, CN):\n",
-    "    KEY_FILE = \"cert.key\"\n",
-    "    CERT_FILE = \"cert.crt\"\n",
-    "    k = crypto.PKey()\n",
-    "    k.generate_key(crypto.TYPE_RSA, 1024)\n",
+    "    k = crypto.PKey() # просто крипто-ключ\n",
+    "    k.generate_key(crypto.TYPE_RSA, 1024) # генерация с RSA - алгоритмом \n",
     "\n",
-    "    cert = crypto.X509()\n",
-    "    cert.get_subject().C = C\n",
-    "    cert.get_subject().ST = ST\n",
-    "    cert.get_subject().L = L\n",
-    "    cert.get_subject().O = O\n",
-    "    cert.get_subject().OU = OU\n",
-    "    cert.get_subject().CN = CN\n",
-    "    cert.set_serial_number(1000)\n",
-    "    cert.gmtime_adj_notBefore(0)\n",
-    "    cert.gmtime_adj_notAfter(10 * 365 * 24 * 60 * 60)\n",
-    "    cert.set_issuer(cert.get_subject())\n",
-    "    cert.set_pubkey(k)\n",
-    "    cert.sign(k, \"sha1\")\n",
-    "    open(CERT_FILE, \"wt\").write(crypto.dump_certificate(crypto.FILETYPE_PEM, cert).decode())\n",
-    "    open(KEY_FILE, \"wt\").write(crypto.dump_privatekey(crypto.FILETYPE_PEM, k).decode())\n",
-    "\n",
-    "\n",
-    "CA_CRT = \"cert.crt\"\n",
-    "CA_KEY = \"cert.key\"\n",
+    "    cert = crypto.X509()  # стандарт формирования сертификата\n",
+    "    cert.get_subject().C = C  # страна\n",
+    "    cert.get_subject().ST = ST  # область\n",
+    "    cert.get_subject().L = L  # город\n",
+    "    cert.get_subject().O = O  # организация\n",
+    "    cert.get_subject().OU = OU  # ячейка\n",
+    "    cert.get_subject().CN = CN  # имя сертификата\n",
+    "    cert.set_serial_number(1000)  # серийный номер\n",
+    "    cert.gmtime_adj_notBefore(0)  # время действия данного сертификата\n",
+    "    cert.gmtime_adj_notAfter(10 * 365 * 24 * 60 * 60)  # время действия данного сертификата\n",
+    "    cert.set_issuer(cert.get_subject())  # задаётся субъект\n",
+    "    cert.set_pubkey(k)  # задание ключа\n",
+    "    cert.sign(k, \"sha1\")  # обработка хеш-функцией\n",
+    "    # сохранение файлов\n",
+    "    open(\"cert.key\", \"wt\").write(crypto.dump_certificate(crypto.FILETYPE_PEM, cert).decode())\n",
+    "    open(\"cert.crt\", \"wt\").write(crypto.dump_privatekey(crypto.FILETYPE_PEM, k).decode())\n",
     "\n",
     "\n",
     "def create_signed_cert(C, ST, L, O, OU, CN):\n",
-    "    KEY_FILE = \"cert2.key\"\n",
-    "    CERT_FILE = \"cert2.crt\"\n",
-    "    with open(CA_CRT, \"rb\") as certfile:\n",
+    "    # подгружается достоверный сертификат\n",
+    "    with open(\"cert.crt\", \"rb\") as certfile:\n",
     "        ca_cert = crypto.load_certificate(crypto.FILETYPE_PEM, certfile.read())\n",
-    "    with open(CA_KEY, \"rb\") as key:\n",
+    "    with open(\"cert.key\", \"rb\") as key:\n",
     "        ca_key = crypto.load_privatekey(crypto.FILETYPE_PEM, key.read())\n",
+    "\n",
+    "    # всё то же самое\n",
     "    k = crypto.PKey()\n",
     "    k.generate_key(crypto.TYPE_RSA, 1024)\n",
-    "\n",
+    "    \n",
     "    cert = crypto.X509()\n",
     "    cert.get_subject().C = C\n",
     "    cert.get_subject().ST = ST\n",
@@ -57,11 +53,11 @@
     "    cert.set_serial_number(1000)\n",
     "    cert.gmtime_adj_notBefore(0)\n",
     "    cert.gmtime_adj_notAfter(10 * 365 * 24 * 60 * 60)\n",
-    "    cert.set_issuer(ca_cert.get_subject())\n",
+    "    cert.set_issuer(ca_cert.get_subject())  # субъект берётся из ранее самоподписанного сертификата\n",
     "    cert.set_pubkey(k)\n",
     "    cert.sign(k, \"shal\")\n",
-    "    open(CERT_FILE, \"wt\").write(crypto.dump_certificate(crypto.FILETYPE_PEM, cert).decode())\n",
-    "    open(KEY_FILE, \"wt\").write(crypto.dump_privatekey(crypto.FILETYPE_PEM, k).decode())\n",
+    "    open(\"cert2.crt\", \"wt\").write(crypto.dump_certificate(crypto.FILETYPE_PEM, cert).decode())\n",
+    "    open(\"cert2.key\", \"wt\").write(crypto.dump_privatekey(crypto.FILETYPE_PEM, k).decode())\n",
     "\n",
     "\n",
     "class Event:\n",
@@ -124,6 +120,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "metadata": {
+     "collapsed": false
+    },
+    "source": []
+   }
   }
  },
  "nbformat": 4,
